@@ -1,3 +1,4 @@
+* BUG#7875 Use initial_start_date instead of start_date in dates recalculation algorithm 
 * FEA#0000 Add covered element on commission list
 * OTH#0000 Update on_change_with_agent following 7755
 * BUG#7755 Change the definition of the domain of 'agent' field by replacing 'start_date' by 'initial_start_date'
